[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]
psl = { path = "../../" }
snmalloc-rs = "0.3.8"
core_affinity = "0.8.1"
log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
revm = "27.1.0"
anyhow = "1.0.98"


